<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    
    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_mobile" />

    <TextView
        android:id="@+id/user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="176dp"
        android:labelFor="@+id/user_input"
        android:text="@string/user" />

   	<TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="@+id/password_input"
        android:layout_below="@+id/user_input"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/password_input"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password_label"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_label"
        android:layout_alignRight="@+id/user_label"
        android:layout_below="@+id/user_label"
        android:ems="10"
        android:inputType="textEmailAddress" >
		<requestFocus />
    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_input"
        android:layout_alignRight="@+id/password_input"
        android:layout_below="@+id/password_input"
        android:layout_marginTop="21dp"
        android:background="@color/blue"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:contentDescription="@string/carregando"
        android:src="@drawable/loading" />

</RelativeLayout>